# untis-mcp

./: .env.example  README.md  daily_report.py  daily_report.sh  pyproject.toml  start.sh
.claude/: settings.json
docs/superpowers/plans/: 2026-03-20-webuntis-mcp-server.md
docs/superpowers/specs/: 2026-03-20-webuntis-mcp-server-design.md
netlify/functions/: mcp.ts
public/: index.html
src/untis_mcp/: __init__.py  api.py  server.py
tests/: test_api.py  test_server.py
